Corrected link order and corrected horizontal scroll issue with specific screen sizes

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@ img {
 }
 
 nav {
-    display: flex;
+    display: block;
     text-transform: uppercase;
     position: relative;
     padding: 10px;
@@ -54,9 +54,8 @@ nav ul {
 }
 
 nav li {
-    position: relative;
-    margin: 3px 0;
-    padding: .5em 7em;
+    margin: 5px 0;
+    padding: .5em;
     list-style: none;
     font-weight: 600;
     font-size: large;
@@ -75,7 +74,7 @@ h1 {
 #about {
     text-align: center;
     background-color: #FCECF9;
-    padding: 0 1em 1em 0;
+    padding-bottom: 1em;
 }
 
 #about p {
@@ -141,11 +140,13 @@ footer, .smaller {
     background-color: #FCECF9;
     display: flex;
     justify-content: space-between;
-    align-items: center;
     padding: 0 1em;
     font-weight: 600;
+    width: 100vw;
     margin-top: -2px;
 }
+
+
 
 .larger {
     display: none;
@@ -204,9 +205,8 @@ footer, .smaller {
         background-color: #FCECF9;
         display: flex;
         justify-content: space-between;
-        padding: 0 3em;
+        padding: 0 1em;
         font-weight: 600;
-        margin-top: -2px;
         width: 100vw;
     }
 
